# agent

./: .gitignore
.github/: CODEOWNERS
260209_linkedin_growth/: .env.example
260209_linkedin_growth/api/: server.py
260209_linkedin_growth/dashboard/: .env.example  (+1 more)
260213_비행기예약사이트/: README.md  index.html  package-lock.json  package.json  todo.md
260214_동적이미지생성도구/: README.md  dod.md
260216_PDF번역도구/: .env.example  README.md  prd.md  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt
260216_PDF번역도구/src/pdf_translator/: __init__.py  cli.py  config.py
260216_PDF번역도구/src/pdf_translator/compose/: __init__.py  pdf_composer.py  versioning.py
260216_PDF번역도구/src/pdf_translator/extract/: __init__.py  layout_segmenter.py  object_extractor.py  validator.py
260216_PDF번역도구/src/pdf_translator/pipeline/: checkpoint.py  orchestrator.py
260216_PDF번역도구/src/pdf_translator/translate/: __init__.py  gemini_client.py  glossary.py
260216_PDF번역도구/tests/: conftest.py
260216_PDF번역도구/tests/integration/: test_smoke_run.py  test_verify_run.py
260216_PDF번역도구/tests/unit/: test_config.py  test_glossary.py  test_versioning.py
260217_ai_pm/: CHANGELOG.md  CONTRIBUTING.md  README.md  prd.md
260220_theartofcollaboration/: prd.md  협업의_기술_The_Art_of_Collaboration.md  협업의_기술_The_Art_of_Collaboration.pptx  협업의_기술_The_Art_of_Collaboration_insight_v3_발표대본.md  협업의_기술_The_Art_of_Collaboration_insight_v3_발표대본_30분.md  협업의_기술_슬라이드별_발표자노트_60분.md  협업의_기술_원문기반_발표대본_30분.md  협업의_기술_원문충실형_발표대본_60분.md
260314_youtube_dubbing/: README.md
260326_youtube_generation/: PRD.md
(+287 files in other folders)
