[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translator"
version = "0.1.0"
description = "PDF layout-preserving translation pipeline (EN -> KO)"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Vibe Project" }]
dependencies = [
  "google-genai>=0.8.0",
  "PyMuPDF>=1.24.0",
  "pdfplumber>=0.11.0",
  "reportlab>=4.2.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
pdf-translator = "pdf_translator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
